fixed some HTML div issues
During the tests I found that the divs would overlap when the message
board got bigger than the page.  Problem fixed adding a container to the
whole body and setting some attributes to the divs. Next istep is to
auto-scroll the messageboard div.

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,11 +2,27 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body {
     font: 13px Helvetica, Arial;
+    height: 100%;
 }
 
 /*chat body*/
 ul {
     list-style-type: none;
+}
+#container {
+    /* position: fixed; */
+    width: 100%;
+    max-height: 100%;
+    top: 0;
+}
+
+#messageboard {
+    position: fixed;
+    overflow: auto;
+    max-height: 88%;
+    width: 100%;
+    height: 100%; 
+    top: 0;
 }
 
 /*user input*/
@@ -20,17 +36,22 @@ ul {
     width: 100%;
     height: 100%;
 }
+#test-div-label {
+    border: 0;
+    height: 5%;
+    top: 0;
+}
 #message {
     border: 0;
     width: 90%;
-    height: 100%;
+    height: 90%;
     margin-right: .5%;
     resize: none;
 }
 #test-button {
     border: none;
     width: 9%;
-    position: fixed;
+    /* position: fixed; */
 }
 .server-message-good {
     color: darkolivegreen;
